--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,1 +1,11 @@
-@media (max-width: 1108px)
+@media (max-width: 1108px) {
+  .wrapper {
+    width: 90%;
+  }
+  
+  #social {
+    position: absolute;
+    width: auto;
+    margin-top: 82px;
+    margin-right: 4px;
+  }
