--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,5 @@
 @media (max-width: 1108px) {
+  
   .wrapper {
     width: 90%;
   }
@@ -8,4 +9,7 @@
     width: auto;
     margin-top: 82px;
     margin-right: 4px;
+  }
+  
+@media (max-width: 900px) {
   }
