--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,10 +5,10 @@
   }
   
   #social {
-    position: absolute;
     width: auto;
-    margin-top: 82px;
-    margin-right: 4px;
+    position: absolute;
+    top: 82px;
+    right: 4px;
   }
   
 @media (max-width: 900px) {
