--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,8 +10,11 @@
     top: 82px;
     right: 4px;
   }
+}
   
-@media (max-width: 900px) 
+@media (max-width: 900px) {
+  
 body {
   font-size: 85%;
 }
+
